[project]
name = "xframe"
dynamic = ["version"]

#dynamic = ["version"]

#description = "Python framework for Fluctuation X-ray Scattering techniques, including the MTIP phasing algorithm"
description = "A framework for scientific algorithms targeting X-ray scattering"
#keywords = ["Fluctuation X-ray Scattering", "Phasing algorithms", "inverse problems", "MTIP"]
keywords = ["scientific computing","xray","FXS","physics"]
readme = "README.md"
authors = [
    {email = "tim.berberich@xfel.eu"},
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "h5py",
    "numpy",
    "ruamel.yaml",
    "scipy",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/European-XFEL/xFrame"
"Documentation" = "https://xframe-fxs.readthedocs.io"

[project.optional-dependencies]
fxs = [
    "pysofft",    
    "shtns",
    "pyopencl",
    "vtk",	
    "matplotlib",	
    "opencv-python",
    "pygsl",
    "psutil",
    "click"
]
all = [
    "matplotlib",
    "pysofft",
    "pyopencl",
    "shtns",
    "vtk",
    "pygsl",
    "flt",
    "psutil",
    "opencv-python",
    "SharedArray"
]


[project.scripts]
xframe = "xframe.main:start_routine_cmd"


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]

#[build-system]	
#requires = ["pdm-backend"]
#build-backend = "pdm.backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["xframe*"]

#[tool.setuptools.dynamic]
#version = {attr = "xframe.__version__"}
